more spacing fixes + responsiveness for more devices

--- a/article-2/style.css
+++ b/article-2/style.css
@@ -57,6 +57,7 @@ nav{
     justify-content: center;
     align-content: center;
     padding-block:1.75rem;
+    margin-inline:1rem;
     
 
 }
@@ -64,6 +65,7 @@ nav ul{
     display:flex;
     flex-direction: row;
     justify-content:space-evenly;
+    column-gap:1rem;
 }
 
 nav ul li{
@@ -119,11 +121,18 @@ h1{
     color:var(--dark-green);
     font-size:3.3rem;
     line-height:2.7rem;
-    margin-block:8rem;
+    margin-block:7rem 4rem;
+    margin-inline:0 auto;
     font-family: "InSerif";
     width:25rem;
     
-
+    @media (width < 415px){
+        font-size:3rem;
+        line-height:2.7rem;
+        max-width:15rem;
+        margin-inline: 0rem auto;
+        margin-block-start:7rem;
+    }
     @media (500px <= width <= 850px) {
         font-size:4.5rem;
         line-height:4rem;
@@ -134,6 +143,12 @@ h1{
 		line-height: 4.5rem;
         margin-inline: auto;
         width:50rem;
+    }
+    @media (850px <= width <= 1000px) {
+        font-size: 5rem;
+		line-height: 4.5rem;
+        margin-inline: auto;
+        width:40rem;
     }
 }
 
@@ -158,7 +173,16 @@ h1 span{
 }
 
 
+
 /* author + date in header */
+.og-text{
+    margin-block-start:0rem;
+
+    @media (width > 850px) {
+        text-align:center;
+    }
+}
+
 .og-text p{
     color:var(--darker-green);
     font-size:1.25rem;
@@ -180,6 +204,7 @@ h1 span{
     }
 
 }
+
 
 
 /* color line formatting */
@@ -444,13 +469,37 @@ blockquote{
 
 
 /* footer formatting */
-footer {
+footer{
     background:var(--darkest-green);
     text-align:center;
     color:var(--green);
-    font-size:1rem;
-    padding-block: 2rem;
-    /* letter-spacing:.25ch; */
+    font-size:.75rem;
+    
+    letter-spacing: .1ch;
+
+    @media (500px <= width <= 850px){
+        font-size:.9rem;
+    }
+    @media (width > 850px){
+        font-size:1rem;
+    }
+}
+footer p{
+    padding-block-end:2rem;
+    margin-inline:1.5rem;
+
+}
+footer nav{
+    padding-block:2rem 1rem;
+    max-width:30rem;
+    margin-inline:auto;
+
+    @media (500px <= width <= 850px){
+        max-width:40rem;
+    }
+    @media (width > 850px){
+        max-width:50rem;
+    }
 }
 footer nav a{
     color:var(--light-green);
@@ -458,3 +507,4 @@ footer nav a{
 footer nav a:hover{
     color:var(--dark-green);
 }
+
